--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
     "multer": "^1.3.0"
+  },
+  "devDependencies": {
+    "@types/node": "^8.0.46"
   }
 }
